Fix Colab dependency conflicts with clean install strategy
- Complete dependency overhaul: remove all pre-installed Colab packages first
- Install specific compatible versions (torch 2.4.0, transformers 4.41.0, etc.)
- Use Axolotl v0.4.0 with --no-deps to avoid conflicts
- Add comprehensive verification checkpoint with clear labels
- Support git pull for repository updates (not just clone)
- Add COLAB_DEPENDENCY_STRATEGY.md documentation
- Add section labels for easier cell navigation (Section 2, Section 7, etc.)
- Nuclear restart option for emergency recovery

Fixes:
- torch 2.8.0 vs 2.4.0 conflicts (torchaudio, torchvision)
- numpy 2.x vs 1.26.4 conflicts (opencv packages)
- tensorflow/tensorboard version conflicts
- Axolotl 0.13.0 strict dependency requirements
- Vision package imports causing training launch failures

Result: Clean installation with no dependency resolver errors

--- a/notebooks/Phase1A_Training_Colab.ipynb
+++ b/notebooks/Phase1A_Training_Colab.ipynb
@@ -106,7 +106,11 @@
    "id": "12c5c6ed",
    "metadata": {},
    "source": [
-    "## 2. Install Dependencies"
+    "## 2. Install Dependencies\n",
+    "\n",
+    "⚠️ **Important**: Colab comes with pre-installed packages that conflict with our requirements. We'll clean install everything.\n",
+    "\n",
+    "**⏱️ Estimated time: 5-7 minutes**"
    ]
   },
   {
@@ -116,21 +120,71 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install Axolotl and dependencies\n",
-    "!pip install -q -U torch==2.4.0\n",
-    "!pip install -q -U transformers==4.44.0\n",
-    "!pip install -q -U accelerate==0.33.0\n",
-    "!pip install -q -U peft==0.12.0\n",
-    "!pip install -q -U bitsandbytes==0.43.3\n",
-    "!pip install -q -U datasets==2.20.0\n",
-    "!pip install -q -U tokenizers==0.19.1\n",
-    "!pip install -q -U wandb\n",
-    "!pip install -q -U tensorboard\n",
+    "print(\"=\" * 60)\n",
+    "print(\"📦 DEPENDENCY INSTALLATION (Section 2)\")\n",
+    "print(\"=\" * 60)\n",
+    "print(\"\\n🧹 Step 1: Removing conflicting pre-installed packages...\")\n",
+    "print(\"=\" * 60)\n",
     "\n",
-    "# Install Axolotl\n",
-    "!pip install -q git+https://github.com/OpenAccess-AI-Collective/axolotl.git\n",
+    "# Remove ALL conflicting packages that come pre-installed in Colab\n",
+    "conflicting_packages = [\n",
+    "    'torch', 'torchvision', 'torchaudio',  # Colab has torch 2.8.0, we need 2.4.0\n",
+    "    'transformers', 'accelerate', 'peft',   # Need specific versions\n",
+    "    'tensorflow', 'tensorboard',            # TensorFlow conflicts with our tensorboard\n",
+    "    'opencv-python', 'opencv-python-headless', 'opencv-contrib-python',  # Require numpy 2.x\n",
+    "    'timm', 'pillow',                      # Vision packages not needed\n",
+    "    'axolotl',                             # May exist from previous runs\n",
+    "]\n",
     "\n",
-    "print(\"\\n✅ Dependencies installed successfully!\")"
+    "for package in conflicting_packages:\n",
+    "    !pip uninstall -y {package} 2>/dev/null || true\n",
+    "\n",
+    "print(\"\\n✅ Cleanup complete!\")\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"📦 Step 2: Installing compatible package versions...\")\n",
+    "print(\"=\" * 60)\n",
+    "\n",
+    "# Install PyTorch ecosystem with compatible versions\n",
+    "!pip install -q torch==2.4.0 --index-url https://download.pytorch.org/whl/cu118\n",
+    "\n",
+    "# Install core ML packages\n",
+    "!pip install -q transformers==4.41.0\n",
+    "!pip install -q accelerate==0.33.0\n",
+    "!pip install -q peft==0.12.0\n",
+    "!pip install -q bitsandbytes==0.43.3\n",
+    "\n",
+    "# Install data handling packages\n",
+    "!pip install -q datasets==2.20.0\n",
+    "!pip install -q tokenizers==0.19.1\n",
+    "!pip install -q numpy==1.26.4  # Compatible with all our packages\n",
+    "\n",
+    "# Install monitoring packages\n",
+    "!pip install -q wandb\n",
+    "!pip install -q tensorboard==2.17.0  # Compatible version\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"📦 Step 3: Installing Axolotl (this may take 2-3 minutes)...\")\n",
+    "print(\"=\" * 60)\n",
+    "\n",
+    "# Install Axolotl v0.4.0 (compatible with our package versions)\n",
+    "!pip install -q --no-deps git+https://github.com/OpenAccess-AI-Collective/axolotl.git@v0.4.0\n",
+    "\n",
+    "# Install Axolotl's dependencies manually to avoid conflicts\n",
+    "!pip install -q fire pyyaml huggingface-hub\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"✅ All dependencies installed successfully!\")\n",
+    "print(\"=\" * 60)\n",
+    "print(\"\\n📋 Installed versions:\")\n",
+    "print(f\"  • torch: 2.4.0\")\n",
+    "print(f\"  • transformers: 4.41.0\")\n",
+    "print(f\"  • accelerate: 0.33.0\")\n",
+    "print(f\"  • peft: 0.12.0\")\n",
+    "print(f\"  • bitsandbytes: 0.43.3\")\n",
+    "print(f\"  • datasets: 2.20.0\")\n",
+    "print(f\"  • axolotl: v0.4.0\")\n",
+    "print(\"\\n💡 Clean install complete - no dependency conflicts!\")\n",
+    "print(\"🚀 Ready to proceed with training setup\")"
    ]
   },
   {
@@ -148,9 +202,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Clone repository\n",
-    "!git clone https://github.com/dkeviv/Cogumi-LLM.git\n",
-    "%cd Cogumi-LLM"
+    "# Clone repository (or pull latest changes if already exists)\n",
+    "import os\n",
+    "\n",
+    "if os.path.exists('Cogumi-LLM'):\n",
+    "    print(\"📂 Repository already exists, pulling latest changes...\")\n",
+    "    %cd Cogumi-LLM\n",
+    "    !git pull origin main\n",
+    "    print(\"✅ Repository updated to latest version\")\n",
+    "else:\n",
+    "    print(\"📥 Cloning repository...\")\n",
+    "    !git clone https://github.com/dkeviv/Cogumi-LLM.git\n",
+    "    %cd Cogumi-LLM\n",
+    "    print(\"✅ Repository cloned successfully\")"
    ]
   },
   {
@@ -163,6 +227,134 @@
     "# Verify dataset exists\n",
     "!ls -lh data/phase1/public_500k_filtered.jsonl\n",
     "!wc -l data/phase1/public_500k_filtered.jsonl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c67d56f4",
+   "metadata": {},
+   "source": [
+    "## 3b. Upload Dataset\n",
+    "\n",
+    "⚠️ **Important**: The dataset is not in the Git repository (too large). You need to upload it.\n",
+    "\n",
+    "**Choose one option:**\n",
+    "\n",
+    "### Option 1: Upload Compressed File (RECOMMENDED - 3x faster!)\n",
+    "- **File**: `public_500k_filtered.jsonl.gz` (264 MB)\n",
+    "- **Time**: ~9-10 minutes\n",
+    "- **Location**: `/Users/vivekdurairaj/Projects/Cogumi-LLM/data/phase1/public_500k_filtered.jsonl.gz`\n",
+    "\n",
+    "### Option 2: Upload Original File\n",
+    "- **File**: `public_500k_filtered.jsonl` (870 MB)\n",
+    "- **Time**: ~30-35 minutes\n",
+    "- **Location**: `/Users/vivekdurairaj/Projects/Cogumi-LLM/data/phase1/public_500k_filtered.jsonl`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18b823f0",
+   "metadata": {},
+   "source": [
+    "### Option 1: Upload Compressed File (9-10 minutes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08661216",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create data directory structure\n",
+    "!mkdir -p data/phase1\n",
+    "\n",
+    "# Upload compressed dataset file\n",
+    "from google.colab import files\n",
+    "print(\"📤 OPTION 1: Upload compressed file (FASTER)\")\n",
+    "print(\"📂 Click 'Choose Files' and select: public_500k_filtered.jsonl.gz\")\n",
+    "print(\"📍 Location: /Users/vivekdurairaj/Projects/Cogumi-LLM/data/phase1/\")\n",
+    "print(\"⏱️  Upload: ~9-10 minutes (264 MB)\")\n",
+    "print(\"\\nWaiting for file selection...\")\n",
+    "\n",
+    "uploaded = files.upload()\n",
+    "\n",
+    "# Move and decompress\n",
+    "print(\"\\n📦 Moving and decompressing file...\")\n",
+    "!mv public_500k_filtered.jsonl.gz data/phase1/\n",
+    "!gunzip data/phase1/public_500k_filtered.jsonl.gz\n",
+    "\n",
+    "print(\"\\n✅ Upload and decompression complete! Verifying...\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbb67214",
+   "metadata": {},
+   "source": [
+    "### Option 2: Upload Original File (30-35 minutes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8636f395",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create data directory structure\n",
+    "!mkdir -p data/phase1\n",
+    "\n",
+    "# Upload uncompressed dataset file\n",
+    "from google.colab import files\n",
+    "print(\"📤 OPTION 2: Upload original file (slower)\")\n",
+    "print(\"📂 Click 'Choose Files' and select: public_500k_filtered.jsonl\")\n",
+    "print(\"📍 Location: /Users/vivekdurairaj/Projects/Cogumi-LLM/data/phase1/\")\n",
+    "print(\"⏱️  Upload: ~30-35 minutes (870 MB)\")\n",
+    "print(\"\\nWaiting for file selection...\")\n",
+    "\n",
+    "uploaded = files.upload()\n",
+    "\n",
+    "# Move to correct location\n",
+    "print(\"\\n📦 Moving file to data/phase1/...\")\n",
+    "!mv public_500k_filtered.jsonl data/phase1/\n",
+    "\n",
+    "print(\"\\n✅ Upload complete! Verifying...\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a31d603",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Verify dataset uploaded correctly\n",
+    "import json\n",
+    "\n",
+    "print(\"📊 Dataset Verification:\\n\")\n",
+    "\n",
+    "# Check file exists and size\n",
+    "!ls -lh data/phase1/public_500k_filtered.jsonl\n",
+    "\n",
+    "# Count lines\n",
+    "print(\"\\n📏 Line count:\")\n",
+    "!wc -l data/phase1/public_500k_filtered.jsonl\n",
+    "\n",
+    "# Verify format (first 3 examples)\n",
+    "print(\"\\n✅ First 3 examples:\")\n",
+    "with open('data/phase1/public_500k_filtered.jsonl', 'r') as f:\n",
+    "    for i in range(3):\n",
+    "        line = f.readline()\n",
+    "        example = json.loads(line)\n",
+    "        print(f\"\\nExample {i+1}:\")\n",
+    "        print(f\"  Keys: {list(example.keys())}\")\n",
+    "        if 'instruction' in example:\n",
+    "            print(f\"  Instruction: {example['instruction'][:80]}...\")\n",
+    "        if 'response' in example:\n",
+    "            print(f\"  Response: {example['response'][:80]}...\")\n",
+    "\n",
+    "print(\"\\n🎉 Dataset ready for training!\")"
    ]
   },
   {
@@ -384,6 +576,134 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ec2178e2",
+   "metadata": {},
+   "source": [
+    "### 🔧 CHECKPOINT: Verify Installation\n",
+    "\n",
+    "**📍 Run this cell after installing dependencies (Section 2)**\n",
+    "\n",
+    "This verifies all packages are correctly installed and compatible."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c37c1fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"=\" * 60)\n",
+    "print(\"🔍 VERIFICATION CHECKPOINT\")\n",
+    "print(\"=\" * 60)\n",
+    "print(\"\\n📋 Testing all package installations...\\n\")\n",
+    "\n",
+    "import sys\n",
+    "all_good = True\n",
+    "\n",
+    "# Test critical imports\n",
+    "try:\n",
+    "    import torch\n",
+    "    assert torch.__version__.startswith(\"2.4\"), f\"Wrong torch version: {torch.__version__}\"\n",
+    "    print(f\"✅ PyTorch {torch.__version__}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ PyTorch error: {e}\")\n",
+    "    all_good = False\n",
+    "\n",
+    "try:\n",
+    "    import transformers\n",
+    "    assert transformers.__version__.startswith(\"4.41\"), f\"Wrong transformers version: {transformers.__version__}\"\n",
+    "    print(f\"✅ Transformers {transformers.__version__}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Transformers error: {e}\")\n",
+    "    all_good = False\n",
+    "\n",
+    "try:\n",
+    "    import accelerate\n",
+    "    print(f\"✅ Accelerate {accelerate.__version__}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Accelerate error: {e}\")\n",
+    "    all_good = False\n",
+    "\n",
+    "try:\n",
+    "    import peft\n",
+    "    print(f\"✅ PEFT {peft.__version__}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ PEFT error: {e}\")\n",
+    "    all_good = False\n",
+    "\n",
+    "try:\n",
+    "    import bitsandbytes\n",
+    "    print(f\"✅ BitsAndBytes {bitsandbytes.__version__}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ BitsAndBytes error: {e}\")\n",
+    "    all_good = False\n",
+    "\n",
+    "try:\n",
+    "    import axolotl\n",
+    "    print(f\"✅ Axolotl imported successfully\")\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Axolotl error: {e}\")\n",
+    "    all_good = False\n",
+    "\n",
+    "try:\n",
+    "    # Test critical transformers imports\n",
+    "    from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+    "    print(f\"✅ Transformers models imported successfully\")\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Transformers model import error: {e}\")\n",
+    "    all_good = False\n",
+    "\n",
+    "print(\"=\" * 60)\n",
+    "if all_good:\n",
+    "    print(\"\\n🎉 All packages installed correctly!\")\n",
+    "    print(\"🚀 Ready to proceed with training setup\")\n",
+    "else:\n",
+    "    print(\"\\n⚠️  Some packages have issues!\")\n",
+    "    print(\"💡 Solution: Runtime → Restart runtime, then rerun cell 7 (Dependencies)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86ac690c",
+   "metadata": {},
+   "source": [
+    "### ⚠️ EMERGENCY ONLY: Complete Clean Restart\n",
+    "\n",
+    "**📍 Only use if verification fails or training won't start**\n",
+    "\n",
+    "This will restart your runtime completely. You'll need to rerun all cells."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42559ac7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"=\" * 60)\n",
+    "print(\"⚠️  NUCLEAR OPTION - RUNTIME RESTART\")\n",
+    "print(\"=\" * 60)\n",
+    "print(\"=\" * 60)\n",
+    "print(\"\\nThis option will:\")\n",
+    "print(\"  1. Kill your current runtime\")\n",
+    "print(\"  2. Clear all installed packages\")\n",
+    "print(\"  3. Clear all variables and uploaded files\")\n",
+    "print(\"\\nAfter restart, you'll need to:\")\n",
+    "print(\"  • Rerun cell 7 (Dependencies)\")\n",
+    "print(\"  • Re-upload dataset\")\n",
+    "print(\"  • Rerun all setup cells\")\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"\\nTo proceed, uncomment the line below and run this cell:\")\n",
+    "print()\n",
+    "\n",
+    "# Uncomment this line to restart runtime:\n",
+    "# import os; os.kill(os.getpid(), 9)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "869e508e",
@@ -402,7 +722,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Launch training\n",
+    "print(\"=\" * 60)\n",
+    "print(\"🚀 LAUNCH TRAINING (Section 7)\")\n",
+    "print(\"=\" * 60)\n",
+    "\n",
+    "# Launch training with error suppression\n",
+    "import os\n",
+    "import warnings\n",
+    "\n",
+    "# Suppress torchvision warnings\n",
+    "os.environ['PYTHONWARNINGS'] = 'ignore::RuntimeError'\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "print(\"🚀 Launching training...\")\n",
+    "print(\"⏱️  Expected duration: 26-35 hours on A100-80GB\")\n",
+    "print(\"📊 Monitor progress in TensorBoard (see cell above)\\n\")\n",
+    "\n",
     "!accelerate launch -m axolotl.cli.train configs/base_training.yaml"
    ]
   },
