--- a/notebooks/H100_Training_Simple.ipynb
+++ b/notebooks/H100_Training_Simple.ipynb
@@ -134,17 +134,25 @@
    "outputs": [],
    "source": [
     "import subprocess\n",
+    "import sys\n",
     "\n",
     "print('🔧 Installing training dependencies (Colab-compatible versions)...')\n",
     "print('⏱️  This will take 3-5 minutes\\n')\n",
     "\n",
     "# Install PyTorch 2.4.0 with CUDA 12.1 (closest to Colab's cu118)\n",
-    "print('Step 1: Installing PyTorch 2.4.0...\\n')\n",
-    "torch_cmd = 'pip install -q torch==2.4.0 torchvision==0.19.0 torchaudio==2.4.0 --index-url https://download.pytorch.org/whl/cu121'\n",
-    "subprocess.run(torch_cmd, shell=True)\n",
+    "print('Step 1: Installing PyTorch 2.4.0...')\n",
+    "sys.stdout.flush()\n",
+    "torch_cmd = 'pip install torch==2.4.0 torchvision==0.19.0 torchaudio==2.4.0 --index-url https://download.pytorch.org/whl/cu121'\n",
+    "result = subprocess.run(torch_cmd, shell=True, capture_output=False)\n",
+    "if result.returncode == 0:\n",
+    "    print('✅ PyTorch installed!\\n')\n",
+    "else:\n",
+    "    print('⚠️  PyTorch installation had warnings (might still work)\\n')\n",
     "\n",
     "# Install exact versions from Colab\n",
-    "print('\\nStep 2: Installing HuggingFace stack...\\n')\n",
+    "print('Step 2: Installing HuggingFace stack...')\n",
+    "sys.stdout.flush()\n",
+    "\n",
     "packages = [\n",
     "    'transformers==4.46.3',\n",
     "    'accelerate==1.2.1', \n",
@@ -157,12 +165,14 @@
     "    'trl==0.12.2'\n",
     "]\n",
     "\n",
-    "for pkg in packages:\n",
-    "    print(f'Installing {pkg}...')\n",
+    "for i, pkg in enumerate(packages, 1):\n",
+    "    print(f'  [{i}/{len(packages)}] Installing {pkg}...')\n",
+    "    sys.stdout.flush()\n",
     "    subprocess.run(f'pip install -q {pkg}', shell=True)\n",
     "\n",
     "print('\\n✅ Installation complete!')\n",
     "print('\\n🔍 Verifying versions...\\n')\n",
+    "sys.stdout.flush()\n",
     "\n",
     "# Verify installations\n",
     "result = subprocess.run(\n",
