Fix tokenizers version conflict in H100 notebook
- Changed tokenizers from 0.21.0 to 0.20.4
- Fixes conflict: transformers 4.46.3 requires tokenizers<0.21
- Note: Colab notebook also has this issue but pip resolves it differently

--- a/notebooks/H100_Training_Simple.ipynb
+++ b/notebooks/H100_Training_Simple.ipynb
@@ -149,17 +149,17 @@
     "else:\n",
     "    print('⚠️  PyTorch installation had warnings (might still work)\\n')\n",
     "\n",
-    "# Install exact versions from Colab\n",
+    "# Install exact versions from Colab (FIXED: tokenizers 0.20.4 instead of 0.21.0)\n",
     "print('Step 2: Installing HuggingFace stack...')\n",
     "sys.stdout.flush()\n",
     "\n",
     "packages = [\n",
     "    'transformers==4.46.3',\n",
+    "    'tokenizers==0.20.4',  # Fixed: 0.21.0 conflicts with transformers 4.46.3\n",
     "    'accelerate==1.2.1', \n",
     "    'peft==0.13.2',\n",
     "    'bitsandbytes==0.45.0',\n",
     "    'datasets==3.2.0',\n",
-    "    'tokenizers==0.21.0',\n",
     "    'wandb',\n",
     "    'tensorboard==2.18.0',\n",
     "    'trl==0.12.2'\n",
