copilot instructions and H100 training clean

--- a/notebooks/H100_Training_Clean.ipynb
+++ b/notebooks/H100_Training_Clean.ipynb
@@ -852,6 +852,111 @@
     "print(f\"   This script will automatically resume from the last checkpoint if training crashes\")\n",
     "print(f\"\\n🔄 Now run the training cell again to restart with auto-resume\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e1dab5d",
+   "metadata": {},
+   "source": [
+    "## ✅ PERFECT! Resume from Checkpoint 9000\n",
+    "\n",
+    "**You have checkpoint-9000! That's ~5.3 hours of progress saved!**\n",
+    "\n",
+    "**Next steps:**\n",
+    "1. ✅ Run the cell below (ACTION B) to update train.py with auto-resume\n",
+    "2. ✅ Then scroll back up and run the training cell again\n",
+    "3. ✅ Training will automatically resume from step 9000\n",
+    "\n",
+    "**Progress so far:**\n",
+    "- Completed: 9,000 / 240,240 steps (~3.7%)\n",
+    "- Time invested: ~5.3 hours\n",
+    "- Remaining: ~32.7 hours"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "676126b8",
+   "metadata": {},
+   "source": [
+    "## 🔍 Verify Auto-Resume Script Was Created\n",
+    "\n",
+    "**Before running training, verify the script has resume capability:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81a4a265",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check if train.py has auto-resume code\n",
+    "import subprocess\n",
+    "\n",
+    "print(\"🔍 Checking if train.py has resume capability...\")\n",
+    "result = subprocess.run(['grep', '-n', 'resume_checkpoint', '/data/Cogumi-LLM/train.py'], \n",
+    "                       capture_output=True, text=True)\n",
+    "\n",
+    "if result.returncode == 0:\n",
+    "    print(\"✅ Auto-resume code FOUND in train.py:\")\n",
+    "    print(result.stdout)\n",
+    "    print(\"\\n✅ Script is ready to auto-resume from checkpoint-9000!\")\n",
+    "else:\n",
+    "    print(\"❌ Auto-resume code NOT found!\")\n",
+    "    print(\"⚠️ You need to run the ACTION B cell above first!\")\n",
+    "    \n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"Now check what checkpoint it will find:\")\n",
+    "print(\"=\"*60)\n",
+    "\n",
+    "# Check what checkpoint will be detected\n",
+    "checkpoint_check = subprocess.run(['ls', '-lht', '/data/Cogumi-LLM/checkpoints/'], \n",
+    "                                 capture_output=True, text=True)\n",
+    "print(checkpoint_check.stdout)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0b5865d",
+   "metadata": {},
+   "source": [
+    "## 🚨 CHECKPOINT CORRUPTED - Use Previous Checkpoint\n",
+    "\n",
+    "**Checkpoint-9000 is corrupted (incomplete save). We'll use checkpoint-8000 instead.**\n",
+    "\n",
+    "You still saved **4.7 hours** of work! Better than starting from scratch."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d9ef7f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete corrupted checkpoint-9000 and use checkpoint-8000 instead\n",
+    "import subprocess\n",
+    "import shutil\n",
+    "import os\n",
+    "\n",
+    "print(\"🗑️ Removing corrupted checkpoint-9000...\")\n",
+    "corrupted_path = \"/data/Cogumi-LLM/checkpoints/checkpoint-9000\"\n",
+    "if os.path.exists(corrupted_path):\n",
+    "    shutil.rmtree(corrupted_path)\n",
+    "    print(f\"✅ Deleted {corrupted_path}\")\n",
+    "else:\n",
+    "    print(f\"⚠️ Checkpoint-9000 not found (may already be deleted)\")\n",
+    "\n",
+    "print(\"\\n📋 Current checkpoints:\")\n",
+    "result = subprocess.run(['ls', '-lht', '/data/Cogumi-LLM/checkpoints/'], \n",
+    "                       capture_output=True, text=True)\n",
+    "print(result.stdout)\n",
+    "\n",
+    "print(\"\\n✅ Now training will resume from checkpoint-8000\")\n",
+    "print(\"   Progress: 8,000 steps completed (~4.7 hours saved)\")\n",
+    "print(\"   Remaining: ~33.3 hours\")\n",
+    "print(\"\\n🔄 Run the training cell again to resume from checkpoint-8000\")"
+   ]
   }
  ],
  "metadata": {
