Fix Phase 1B notebook: Store Path and model_path as globals in Cell 1
- Cell 1 now stores Path and model_path in builtins for access by later cells
- Cell 4 no longer needs to import Path (uses global from Cell 1)
- Fixes NameError: name 'Path' is not defined in Cell 4

--- a/notebooks/H100_Phase1B_Benchmark.ipynb
+++ b/notebooks/H100_Phase1B_Benchmark.ipynb
@@ -213,6 +213,8 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "import os\n",
+    "from pathlib import Path\n",
     "\n",
     "# Add project directory to path - check multiple locations\n",
     "project_paths = [\n",
@@ -287,6 +289,15 @@
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
+    "\n",
+    "# Safety check - ensure suite is initialized\n",
+    "if 'suite' not in globals():\n",
+    "    print(\"❌ ERROR: BenchmarkSuite not initialized!\")\n",
+    "    print(\"\\n🔧 Please run Cell 4 first to initialize the benchmark suite.\")\n",
+    "    print(\"\\n📝 Make sure you've:\")\n",
+    "    print(\"   1. Uploaded the fixed automated_gpt4_benchmark.py script\")\n",
+    "    print(\"   2. Successfully run Cell 4 (Initialize Benchmark Suite)\")\n",
+    "    raise NameError(\"suite not defined - run Cell 4 first\")\n",
     "\n",
     "print(\"🚀 Starting benchmark...\")\n",
     "print(f\"   Start time: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\")\n",
