--- a/notebooks/H100_Phase1B_Benchmark.ipynb
+++ b/notebooks/H100_Phase1B_Benchmark.ipynb
@@ -49,6 +49,11 @@
     "import os\n",
     "from pathlib import Path\n",
     "\n",
+    "# Store Path globally for later cells\n",
+    "import builtins\n",
+    "builtins.Path = Path\n",
+    "builtins.model_path = None\n",
+    "\n",
     "# Check model exists - try multiple possible locations\n",
     "possible_paths = [\n",
     "    \"/workspace/data/Cogumi-LLM/checkpoints/final\",           # Your actual location!\n",
@@ -59,10 +64,10 @@
     "    \"/data/Cogumi-LLM/checkpoints/checkpoint-240240\",\n",
     "]\n",
     "\n",
-    "model_path = None\n",
     "for path in possible_paths:\n",
     "    if os.path.exists(path):\n",
     "        model_path = path\n",
+    "        builtins.model_path = path  # Store globally\n",
     "        print(f\"✅ Model found at: {model_path}\")\n",
     "        break\n",
     "\n",
@@ -214,7 +219,7 @@
    "source": [
     "import sys\n",
     "import os\n",
-    "from pathlib import Path\n",
+    "# Path and model_path are set globally by Cell 1\n",
     "\n",
     "# Add project directory to path - check multiple locations\n",
     "project_paths = [\n",
