Diagnostic  notebook updated to detect source and caegory correctly

--- a/notebooks/Benchmark_Diagnostic_Analysis.ipynb
+++ b/notebooks/Benchmark_Diagnostic_Analysis.ipynb
@@ -166,6 +166,7 @@
    "outputs": [],
    "source": [
     "# Create visualization\n",
+    "import os\n",
     "fig, axes = plt.subplots(2, 2, figsize=(16, 12))\n",
     "\n",
     "# 1. Score comparison bar chart\n",
@@ -259,8 +260,11 @@
     "    ax4.text(i, tp + 3, f'{tp:.0f}%', ha='center', fontweight='bold')\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('/Users/vivekdurairaj/Projects/Cogumi-LLM/data/benchmark_analysis.png', dpi=300, bbox_inches='tight')\n",
-    "print(\"\\n💾 Visualization saved to: data/benchmark_analysis.png\")\n",
+    "\n",
+    "# Save path - works on both Vast.ai and local\n",
+    "save_path = '/workspace/data/Cogumi-LLM/data/benchmark_analysis.png' if os.path.exists('/workspace') else '/Users/vivekdurairaj/Projects/Cogumi-LLM/data/benchmark_analysis.png'\n",
+    "plt.savefig(save_path, dpi=300, bbox_inches='tight')\n",
+    "print(f\"\\n💾 Visualization saved to: {save_path}\")\n",
     "plt.show()"
    ]
   },
@@ -1376,11 +1380,60 @@
     "from pathlib import Path\n",
     "\n",
     "# Path to training dataset\n",
-    "dataset_path = Path(\"/Users/vivekdurairaj/Projects/Cogumi-LLM/data/phase1/public_500k_filtered.jsonl\")\n",
+    "# For Vast.ai: /workspace/data/Cogumi-LLM/data/phase1/public_500k_filtered.jsonl\n",
+    "# For local: /Users/vivekdurairaj/Projects/Cogumi-LLM/data/phase1/public_500k_filtered.jsonl\n",
+    "dataset_path = Path(\"/workspace/data/Cogumi-LLM/data/phase1/public_500k_filtered.jsonl\")\n",
     "\n",
     "print(f\"📂 Loading dataset from: {dataset_path}\")\n",
     "print(f\"   File exists: {dataset_path.exists()}\")\n",
-    "print(f\"   File size: {dataset_path.stat().st_size / 1024 / 1024:.1f} MB\" if dataset_path.exists() else \"\")"
+    "if dataset_path.exists():\n",
+    "    print(f\"   File size: {dataset_path.stat().st_size / 1024 / 1024:.1f} MB\")\n",
+    "else:\n",
+    "    print(\"   ⚠️ File not found! Check the path.\")\n",
+    "    print(\"   Common paths:\")\n",
+    "    print(\"   - Vast.ai: /workspace/data/Cogumi-LLM/data/phase1/public_500k_filtered.jsonl\")\n",
+    "    print(\"   - Local:   /Users/vivekdurairaj/Projects/Cogumi-LLM/data/phase1/public_500k_filtered.jsonl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "297d3950",
+   "metadata": {},
+   "source": [
+    "### First, let's examine the actual dataset structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab1f8d53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Examine first few examples to understand structure\n",
+    "print(\"🔍 Examining dataset structure...\\n\")\n",
+    "\n",
+    "with open(dataset_path, 'r', encoding='utf-8') as f:\n",
+    "    for i in range(5):\n",
+    "        line = f.readline()\n",
+    "        if not line:\n",
+    "            break\n",
+    "        try:\n",
+    "            example = json.loads(line)\n",
+    "            print(f\"Example {i+1}:\")\n",
+    "            print(f\"  Keys: {list(example.keys())}\")\n",
+    "            print(f\"  Sample content:\")\n",
+    "            for key, value in example.items():\n",
+    "                if isinstance(value, str):\n",
+    "                    preview = value[:100] + \"...\" if len(value) > 100 else value\n",
+    "                    print(f\"    {key}: {preview}\")\n",
+    "                else:\n",
+    "                    print(f\"    {key}: {value}\")\n",
+    "            print()\n",
+    "        except json.JSONDecodeError:\n",
+    "            continue\n",
+    "\n",
+    "print(\"=\" * 80)"
    ]
   },
   {
@@ -1390,7 +1443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load and analyze dataset\n",
+    "# Load and analyze dataset - UPDATED to handle different field names\n",
     "def analyze_dataset(file_path, sample_size=None):\n",
     "    \"\"\"Analyze dataset composition and order.\"\"\"\n",
     "    \n",
@@ -1406,21 +1459,35 @@
     "            try:\n",
     "                example = json.loads(line)\n",
     "                \n",
-    "                # Track source\n",
-    "                source = example.get('source', 'unknown')\n",
+    "                # Try to find source field (various possible names)\n",
+    "                source = (example.get('source') or \n",
+    "                         example.get('dataset') or \n",
+    "                         example.get('data_source') or \n",
+    "                         example.get('origin') or \n",
+    "                         'unknown')\n",
     "                sources.append(source)\n",
     "                \n",
-    "                # Infer category from source or content\n",
-    "                if 'math' in source.lower() or 'metamath' in source.lower():\n",
+    "                # Infer category from multiple fields\n",
+    "                text_to_analyze = str(source).lower()\n",
+    "                \n",
+    "                # Also check instruction/input/output fields for keywords\n",
+    "                for field in ['instruction', 'input', 'output', 'text', 'question', 'prompt']:\n",
+    "                    if field in example and example[field]:\n",
+    "                        text_to_analyze += \" \" + str(example[field])[:200].lower()\n",
+    "                \n",
+    "                # Categorize based on keywords in content\n",
+    "                if any(keyword in text_to_analyze for keyword in ['math', 'metamath', 'calculate', 'equation', 'solve', 'algebra']):\n",
     "                    category = 'math'\n",
-    "                elif 'code' in source.lower() or 'alpaca' in source.lower():\n",
+    "                elif any(keyword in text_to_analyze for keyword in ['code', 'python', 'function', 'def ', 'class ', 'import ', 'javascript']):\n",
     "                    category = 'code'\n",
-    "                elif 'orca' in source.lower():\n",
+    "                elif any(keyword in text_to_analyze for keyword in ['orca', 'reasoning', 'explain', 'analyze', 'conclude']):\n",
     "                    category = 'reasoning'\n",
-    "                elif 'dolly' in source.lower():\n",
+    "                elif any(keyword in text_to_analyze for keyword in ['dolly', 'knowledge', 'what is', 'who is', 'where is', 'when was']):\n",
     "                    category = 'knowledge'\n",
-    "                elif 'anthropic' in source.lower():\n",
+    "                elif any(keyword in text_to_analyze for keyword in ['anthropic', 'assistant', 'helpful', 'instruction']):\n",
     "                    category = 'instruction'\n",
+    "                elif any(keyword in text_to_analyze for keyword in ['alpaca', 'gpt4']):\n",
+    "                    category = 'general'\n",
     "                else:\n",
     "                    category = 'other'\n",
     "                \n",
@@ -1520,6 +1587,7 @@
    "outputs": [],
    "source": [
     "# Visualize distribution\n",
+    "import os\n",
     "fig, axes = plt.subplots(1, 3, figsize=(15, 4))\n",
     "\n",
     "for ax, dist, title in zip(axes, [first_dist, middle_dist, last_dist], \n",
@@ -1533,8 +1601,11 @@
     "    ax.tick_params(axis='x', rotation=45)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('/Users/vivekdurairaj/Projects/Cogumi-LLM/data/dataset_order_analysis.png', dpi=300, bbox_inches='tight')\n",
-    "print(\"\\n💾 Saved visualization to: data/dataset_order_analysis.png\")\n",
+    "\n",
+    "# Save path - works on both Vast.ai and local\n",
+    "save_path = '/workspace/data/Cogumi-LLM/data/dataset_order_analysis.png' if os.path.exists('/workspace') else '/Users/vivekdurairaj/Projects/Cogumi-LLM/data/dataset_order_analysis.png'\n",
+    "plt.savefig(save_path, dpi=300, bbox_inches='tight')\n",
+    "print(f\"\\n💾 Saved visualization to: {save_path}\")\n",
     "plt.show()"
    ]
   },
